--- a/tgt_practice_backend/nginx/default.conf
+++ b/tgt_practice_backend/nginx/default.conf
@@ -1,15 +1,49 @@
 upstream django {
-	server web:8000;
+    server web:8000;
 }
 
 server {
-	listen 80;
+    listen 80;
+    server_name 172.20.10.6;
 
-	location / {
-		proxy_pass http://django;
-	}
-
-	location /static/ {
-		alias /static/;
-	}
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
+
+server {
+    listen 443 ssl;
+    server_name 172.20.10.6;
+
+    ssl_certificate /etc/nginx/certs/172.20.10.6.crt;
+    ssl_certificate_key /etc/nginx/certs/device.key;
+
+    location / {
+        proxy_pass http://django;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /graphql {
+        proxy_pass http://django/graphql;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /getAToken {
+        proxy_pass http://django/getAToken;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /static/ {
+        alias /static/;
+    }
+}
+
