--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,11 @@ services:
     build: ./tgt_practice_backend/nginx
     ports:
       - "80:80"
+      - '443:443'
     volumes:
       - ./tgt_practice_backend/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./tgt_practice_backend/static:/static
+      - ./tgt_practice_backend/nginx/certificates:/etc/nginx/certs
     depends_on:
       - web
   web:
