--- a/tgt_practice_backend/nginx/default.conf
+++ b/tgt_practice_backend/nginx/default.conf
@@ -18,12 +18,10 @@ server {
     ssl_certificate /etc/nginx/certs/172.20.10.6.crt;
     ssl_certificate_key /etc/nginx/certs/device.key;
 
+    # React приложение на корне
     location / {
-        proxy_pass http://django;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        try_files $uri $uri/ /index.html; # Поиск файла или перенаправление на index.html
+        root /home/tgt_practice_full/tgt_practice_frontend/dist/; # Путь к директории с билдом React приложения
     }
 
     location /graphql {
@@ -46,4 +44,3 @@ server {
         alias /static/;
     }
 }
-
