working now, but need fixes

--- a/tgt_practice_backend/nginx/default.conf
+++ b/tgt_practice_backend/nginx/default.conf
@@ -20,20 +20,21 @@ server {
 
     # React приложение на корне
     location / {
-        try_files $uri $uri/ /index.html; # Поиск файла или перенаправление на index.html
-        root /home/tgt_practice_full/tgt_practice_frontend/dist/; # Путь к директории с билдом React приложения
+        root /usr/share/nginx/html;
+        try_files $uri /index.html;
     }
-
-    location /graphql {
-        proxy_pass http://django/graphql;
+    
+    location /api {
+        proxy_pass http://django/api; 
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header SCRIPT_NAME /graphql;    
     }
 
     location /getAToken {
-        proxy_pass http://django/getAToken;
+        proxy_pass http://django/api/getAToken;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
