--- a/tgt_practice_frontend/Dockerfile
+++ b/tgt_practice_frontend/Dockerfile
@@ -1,11 +1,1 @@
-FROM node:latest
-
-WORKDIR /app
-
-COPY package.json ./
-
-RUN npm install --only=prod
-
-COPY . .
-
-CMD ["npm", "run", "build"]
+COPY /dist /usr/share/nginx/html
