error with token

--- a/tgt_practice_backend/.env
+++ b/tgt_practice_backend/.env
@@ -15,6 +15,6 @@ CORS_ALLOWED_HEADERS=Authorization,Content-Type
 CLIENT_ID=e5f2c1d7-b48a-4752-b5b5-baba92ff89fb
 CLIENT_SECRET=u418Q~wDpPNGBsCof8qNUslqzyBTC0HYwJVeNcci
 AUTHORITY=https://login.microsoftonline.com/common
-REDIRECT_URI=https://172.20.10.6/getAToken
+REDIRECT_URI=https://172.20.10.6/api/getAToken
 SCOPE=User.Read
 ENDPOINT=https://graph.microsoft.com/v1.0/me
