--- a/tgt_practice_backend/nginx/default.conf
+++ b/tgt_practice_backend/nginx/default.conf
@@ -33,7 +33,7 @@ server {
         proxy_set_header SCRIPT_NAME /graphql;    
     }
 
-    location /getAToken {
+    location api/getAToken {
         proxy_pass http://django/api/getAToken;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
